2000-03-21  Tuomas Luttinen  <tuo@wapit.com>

	* gwlib/octstr.c: a bug fixed in the octstr_delete; now the 
	\0-character is added in the end.

Tue Mar 21 14:41:01 2000  Lars Wirzenius  <liw@wapit.com>

	* utils/kannel-nag, utils/changelog-report, utils/daily-patch:
	Added to CVS so that interested people can look at them. Don't
	run them without asking.

2000-03-21  Richard Braakman  <dark@wapit.com>

	* gw/bearerbox.c: Deleted assertion in http_admin_command.  It is
	valid for `list' to be NULL if there are no CGI arguments.

2000-03-21  Richard Braakman  <dark@wapit.com>

	* utils/kannel-init.d: Added some configuration options at the top.
	It now controls my local Kannel setup without problems.

Tue Mar 21 13:43:50 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wtp.c: Converted to use new list instead of (broken) old 
	custom list.

2000-03-21  Richard Braakman  <dark@wapit.com>

	* utils/run_kannel_box.c: Make it remove its pidfile when it dies.

	* utils/kannel-init.d: New script file to start and stop Kannel
	(suitable for use in /etc/init.d)

	* utils/start-stop-daemon.c, utils/start-stop-daemon.8: Utility
	used by kannel-init.d, taken from dpkg source.

	* Makefile.in: Added entry for start-stop-daemon.

Tue Mar 21 12:57:35 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/list.[ch]: Wrote function list_extract_first.
	
	* gw/wsp.c: Modified to use list_extract_first instead of doing
	it manually with list_lock/unlock and list_len and list_get
	and list_delete.

Tue Mar 21 12:38:52 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp.c, gw/wsp_machine-decl.h, gw/wsp_state-decl.h: Converted
	more lists to use gw/list.h. While debugging this (hey, 0 is
	not true, is it?) also implemented wsp_machine_dump.
	
	* gw/list.[ch]: NOTE: Changed interface to list_search (comparison
	function must now return true (non-zero) for item). Also wrote
	list_search_all.

2000-03-20  Tuomas Luttinen  <tuo@wapit.com>
